  * [mod_auth] implement and use safe_memclear, using memset_s or explicit_bzero if available (thx loganaden)
  * [core] don't buffer request bodies smaller than 64k on disk
  * add force_assert for many allocations and function results
  * [mod_secdownload] use a hopefully constant time comparison to check hash (fixes #2679)
  * add handling for lua 5.2 and 5.3 (fixes #2674)

- 1.4.37 - 2015-08-30
  * [mod_proxy] remove debug log line from error log (fixes #2659)
  * [mod_dirlisting] fix dir-listing.set-footer not showing
  * fix out-of-filedescriptors when uploading "large" files (fixes #2660, thx rmilecki)
  * increase upload temporary chunk file size from 1MB to 16MB
  * fix undefined integer shift
  * rewrite network sendfile/mmap/writev/write backends
  * fix some unchecked return value warnings
  * [kqueue] fix kevent call
  * [autoconf] define HAVE_CRYPT when crypt() is present
  * [bsd xattr] fix compile break with BSD extended attributes in stat_cache
  * [mod_cgi] rewrite mmap and generic (post body) send error handling
  * [mmap] fix mmap alignment
  * [plugins] when modules are linked statically still only load the modules given in the config
  * [mmap] handle SIGBUS in network; those get triggered if the file gets smaller during reading
  * fix some warnings found by coverity ("leak" in setup phase, not catching too long unix socket paths in mod_proxy)

- 1.4.36 - 2015-07-26
  * use keep-alive timeout while waiting for HTTP headers; use always the read timeout while waiting for the HTTP body
  * fix bad shift in conditional netmask ".../0" handling
  * add more mime types and a script to generate mime.conf (fixes #2579)
  * add support for (Free)BSD extended attributes
  * [build] use fortify flags with "extra-warnings"
  * [mod_dirlisting,mod_redirect,mod_rewrite] abort config parsing if pcre-compile fails or isn't available
  * [ssl] disable SSL3.0 by default
  * fixed typo in example config found by openSUSE user (boo# 907709)