@@ -13,6 +13,7 @@ NEWS
   * add force_assert for many allocations and function results
   * [mod_secdownload] use a hopefully constant time comparison to check hash (fixes #2679)
   * add handling for lua 5.2 and 5.3 (fixes #2674)
+  * use libmemcached instead of deprecated libmemcache
 
 - 1.4.37 - 2015-08-30
   * [mod_proxy] remove debug log line from error log (fixes #2659)
